@@ -1,3 +1,6 @@
+5 May 2025: Yorgos
+	- Sync unbound and unbound-checkconf log output for unknown modules.
+
 29 April 2025: Wouter
 	- Fix for parallel build of dnstap protoc-c output.
 	- Fix dnstap to use protoc.
